tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-match-exhaustiveness-empty-id-right.old.stderr
error[E0004]: non-exhaustive patterns: type `impl Sized` is non-empty
  --> $DIR/reveal-hidden-via-match-exhaustiveness-empty-id-right.rs:15:11
   |
LL |     match id2(panic!(), test(!n, e)) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `impl Sized`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match id2(panic!(), test(!n, e)) {
LL +         _ => todo!(),
LL +     }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
